[project]
name = "programmieren_2_aufgabe_1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MatzeGit3", email = "wm4310@mci4me.at"},
]
dependencies = []
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
